# pdg

./: .gitignore  Cargo.toml  README.md
example/1001/: template.txt
example/1003/: template.txt
example/1494/: template.txt
example/1914/: template.txt
simple-combinators/: Cargo.toml
simple-combinators/src/: combinator.rs  lib.rs  parser.rs
simple-combinators/tests/: test.rs
src/: details.rs  main.rs  parser.rs  random.rs  token.rs
src/data/: output.txt  template.txt
