[package]
name = "pdg"
version = "0.1.0"
authors = ["Pecco <pecco@qq.com>"]
edition = "2018"
include = ["example/*/template.txt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"simple-combinators" = { version = "0.1", path="simple-combinators"}
"rand" = "^0.7"
"num" = "^0.3"
"powershell_script" ="^0.1"